Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67744

Wrong QProcess::Starting on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.11.1
    • 5.11.0 Beta 3
    • Core: I/O
    • None
    • e5b5484598d97fa8fac22b8f4893d9ade370a153

    Description

      http://code.qt.io/cgit/qt/qtbase.git/tree/src/corelib/io/qprocess_win.cpp#n498

      Here proccess always after QProccess::start() has start Starting state even when process is not actually started.

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            taurus Ivan Romanov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes